--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,8 @@
     <title>MyLibrary</title>
 </head>
 <body>
-    Before - statement
-    <br>
-    <%- body %> - statement
-    <br>
-    After - statement
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
+    <%- body %>
 </body>
 </html>
